--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,31 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
+    }
+}
+
 plugins {
     id 'java'
 }
 
+
+apply plugin: 'java'
+apply plugin: 'com.github.johnrengelman.shadow'
+
+
 group 'de.smoodi'
 version '1.0-SNAPSHOT'
 
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Quickstart',
+                'Implementation-Version': version,
+                'Main-Class': 'de.smoodi.projectchip.Main'
+    }
+}
 repositories {
     mavenCentral()
     jcenter()
@@ -12,7 +33,6 @@ repositories {
 
 dependencies {
     //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
@@ -30,5 +50,4 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-
- */
+*/
