--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,19 @@ jar {
 }
 repositories {
     mavenCentral()
+    mavenLocal()
     jcenter()
 }
 
 dependencies {
     //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
@@ -40,7 +48,7 @@ dependencies {
 
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.8'
 
-    compile 'net.dv8tion:JDA:4.2.0_222'
+    compile 'net.dv8tion:JDA:5.0.0-alpha.3'
     // this is for mysql java connector
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
     runtime "mysql:mysql-connector-java:8.0.25"
